# weather-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: fastapi-architecture.mdc  pytest.mdc
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 4802fc1e37f8_add_memo_to_favorites.py  f4cb5a4d54fb_initial_schema.py
app/: config.py  db.py  dependencies.py  logging_config.py  main.py  schemas.py  seed.py
app/auth/: deps.py  jwt.py
app/middleware/: request_logging.py
app/models/: favorite.py  user.py  weather.py
app/repositories/: favorite_repository.py  user_repository.py  weather_repository.py
app/routers/: auth.py  favorites.py  weather.py
app/services/: auth.py  favorites.py  weather.py
scripts/: setup-github-auth.sh
tests/: conftest.py  test_auth_deps.py  test_auth_login.py  test_favorite_repository.py  test_favorites.py  test_jwt.py  test_password.py  test_request_logging.py  test_seed.py  test_user_model.py  test_weather.py  test_weather_history.py  test_weather_repository.py
