[project]
name = "weather-api"
version = "0.1.0"
description = "FastAPI weather API backed by OpenWeatherMap"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
