[project]
name = "weather-api"
version = "0.1.0"
description = "FastAPI weather API backed by Open-Meteo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.1,<5",
    "cryptography>=48.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.6.0",
    "pymysql>=1.1.3",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ruff.lint.per-file-ignores]
"app/dependencies.py" = ["B008"]
"app/routers/*.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
